--- a/countviews.html
+++ b/countviews.html
@@ -39,13 +39,15 @@
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 <script> 
 // Initialize Firebase
+
+//Linking My Firebase Project to this webpage . (You have to add you configuration code please  dont use  my configuation code)
   var config = {
-    apiKey: "AIzaSyDap2PlQsFky5YnQRhyMqsWENasn_hJUiU",
-    authDomain: "saylani-7b489.firebaseapp.com",
-    databaseURL: "https://saylani-7b489.firebaseio.com",
-    projectId: "saylani-7b489",
-    storageBucket: "saylani-7b489.appspot.com",
-    messagingSenderId: "349400059211"
+    apiKey: "AIzaSyDuF-oviOXEgk6gNO193dRlqUD_gbF2vS8",
+    authDomain: "test-19375.firebaseapp.com",
+    databaseURL: "https://test-19375.firebaseio.com",
+    projectId: "test-19375",
+    storageBucket: "test-19375.appspot.com",
+    messagingSenderId: "822582526044"
   };
   firebase.initializeApp(config);
   
