--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <body>
     <div id="parentdiv">
       <div id="loading">Loading Please Wait......!</div>
-      <div id="viewdiv" style="visibility: hidden" class="Div">
+      <div id="viewdiv" style="display: none" class="Div">
         This Page Has Been Viewed
         <h1 id="views"></h1>
         Times
